--- a/Audi.html
+++ b/Audi.html
@@ -91,7 +91,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
     <div class="w3-twothird w3-container">
       <h1 class="w3-text-DimGrey">Audi Quattro</h1>
       <p>The Audi Quattro, launched in 1980, is a pioneering sports coupe recognized for introducing Audi's groundbreaking Quattro all-wheel-drive system to the automotive world. Originally developed for rallying, the Quattro system provided superior traction and stability, revolutionizing performance car dynamics. The Audi Quattro's success on the rally stage and its impact on the automotive industry cemented its legacy as a trailblazer in the realm of high-performance and all-wheel-drive vehicles.</p>
-	  <img src="images/Audi Quattro.jpg" alt="Audi Quattro" width="60%">
+	  <img src="Images/Audi Quattro.jpg" alt="Audi Quattro" width="60%">
 
 </div>
     <div class="w3-third w3-container">
