--- a/Audi.html
+++ b/Audi.html
@@ -78,7 +78,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
     <div class="w3-twothird w3-container">
       <h1 class="w3-text-DimGrey">Audi R8</h1>
       <p>The Audi R8, introduced in 2006, is a distinguished mid-engine sports car renowned for its performance and design. Through two generations, it has evolved from a V8-powered model to exclusively featuring a potent V10 engine. With its distinctive styling, Quattro all-wheel-drive system, and a commitment to technological advancements, the Audi R8 has become an iconic symbol of Audi's prowess in the high-performance sports car market.</p>
-	  <img src="main/Images/Audi R8.jpg" alt="Audi R8" width="60%">
+	  <img src="Images/Audi R8.jpg" alt="Audi R8" width="60%">
 
 
 </div>
@@ -91,7 +91,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
     <div class="w3-twothird w3-container">
       <h1 class="w3-text-DimGrey">Audi Quattro</h1>
       <p>The Audi Quattro, launched in 1980, is a pioneering sports coupe recognized for introducing Audi's groundbreaking Quattro all-wheel-drive system to the automotive world. Originally developed for rallying, the Quattro system provided superior traction and stability, revolutionizing performance car dynamics. The Audi Quattro's success on the rally stage and its impact on the automotive industry cemented its legacy as a trailblazer in the realm of high-performance and all-wheel-drive vehicles.</p>
-	  <img src="main/Images/Audi Quattro.jpg" alt="Audi Quattro" width="60%">
+	  <img src="Images/Audi Quattro.jpg" alt="Audi Quattro" width="60%">
 
 </div>
     <div class="w3-third w3-container">
