--- a/Mitsubishi.html
+++ b/Mitsubishi.html
@@ -90,7 +90,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
     <div class="w3-twothird w3-container">
       <h1 class="w3-text-DimGrey">Mitsubishi Lancer Evo IX</h1>
       <p>The Mitsubishi Lancer Evolution IX, produced from 2005 to 2007, is a high-performance sports sedan renowned for its rally-inspired design and exceptional driving dynamics. Powered by a turbocharged 2.0-liter inline-four engine, the Evo IX delivered impressive horsepower and torque, coupled with Mitsubishi's advanced Super All-Wheel Control (S-AWC) system for optimal traction. As the ninth iteration in the Evolution series, the Evo IX is celebrated for its agile handling, precise steering, and its success in motorsports, making it a sought-after model among enthusiasts.</p>
-	  <img src="images/Mitsubishi Evo.jpg" alt="Mitsubishi Evo" style="width:60%">
+	  <img src="images/Mitsubishi EVO.jpg" alt="Mitsubishi Evo" style="width:60%">
 
 </div>
     <div class="w3-third w3-container">
